<resources>
    <string name="app_name">Assessment1</string>
    <string name="app_title">BAC Calculator</string>
    <string name="label_weight">Weight (lbs):</string>
    <string name="hint_weight">Enter weight</string>
    <string name="label_gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="label_beer">Beer\n12.0 oz (5%)</string>
    <string name="label_wine">Wine\n5.0 oz (12%)</string>
    <string name="label_liquor">Liquor\n1.5 oz (40%)</string>
    <string name="label_malt">Malt Liquor\n9.0 oz (7%)</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="default_drink_count">0</string>
    <string name="your_bac_level">Your BAC Level: 0.000%</string>
    <string name="you_are_safe">You\'re Safe</string>
    <string name="be_careful">Be careful</string>
    <string name="over_limit">Over the limit!</string>
    <string name="reset_button">Reset</string>
    <string name="calculate_button">Calculate</string>
</resources>